--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -62,6 +62,6 @@ My first minecraft mod to introduce titanium into the game. Better than iron.
     modId="minecraft"
     mandatory=true
 # This version range declares a minimum of the current minecraft version up to but not including the next major version
-    versionRange="[1.19.3,1.20)"
+    versionRange="[1.19.3,1.20.1]"
     ordering="NONE"
     side="BOTH"
